--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,12 +173,49 @@ background-color: #3A2C15 ;
   
   /*  */
 
+  /* Generic */
+a:hover {
+  color: #5F5D4A !important;
+}
+
+.btn-primary{
+  background-color: #FDFAE0;
+  color: #32361C;
+  border: none;
+}
+
+.btn-primary:hover{
+  background-color: #32361C;
+  color:  #FDFAE0;
+  border: none;
+}
+
+  /* Navbar */
 .nav-link {
   color: #32361C !important;
 }
 
-a:hover {
-  color: #5F5D4A !important;
+.navbar-toggler {
+  
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+
+
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+
+  background-color: transparent;
+  border: 1px solid #5F5D4A;
+
+}
+
+/* Carousel */
+#carouselExampleCaptions {
+  margin-top: 50px;
 }
 
 .carousel-caption {
@@ -205,3 +242,68 @@ a:hover {
   color: #FDFAE0;
 
 }
+
+/* Media queries */
+
+/* // X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap */
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+
+
+
+ }
+
+/* // Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) { 
+
+  .carousel-caption {
+
+    top: 5rem;
+
+  }
+
+
+  .carousel-caption h5 {
+    font-size: 42px;
+  }
+  
+  .carousel-caption p {
+    font-size: 21px;  
+  }
+ }
+
+/* // Large devices (desktops, 992px and up) */
+@media (max-width: 992px) { 
+  .carousel-caption {
+
+    top: 5rem;
+
+  }
+
+
+  .carousel-caption h5 {
+    font-size: 42px;
+  }
+  
+  .carousel-caption p {
+    font-size: 21px;  
+  }
+ }
+
+/* // X-Large devices (large desktops, 1200px and up) */
+@media (max-width: 1200px) { 
+  
+  .carousel-caption h5 {
+    font-size: 46px;
+  }
+  
+  .carousel-caption p {
+    font-size: 21px;  
+  }
+
+ }
+
+/* // XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) { }
