--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,18 @@ a:hover {
   border: none;
 }
 
+.btn-dark {
+  background-color: #3A2C15;
+  color:  #FDFAE0;
+  border: none;
+}
+
+.btn-dark:hover {
+  background-color: #FDFAE0;
+  color: #3A2C15;
+  border: none;
+}
+
 .MiguelDominguez {
   font-family: 'Inconsolata', monospace;
   font-weight: 700;
