--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,15 @@ background-color: #3A2C15 ;
   
   /*  */
 
-  /* Generic */
+  /* General */
+
+  body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    background: url('../../assets/img/bg/tile.svg') top left repeat;
+    text-align: left;
+}
+
 a:hover {
   color: #5F5D4A !important;
 }
@@ -287,6 +295,28 @@ a:hover {
 
 #section1 h2 {
   font-size: 72px;
+}
+
+/* Section 3 */
+
+#section3 {
+  margin: 50px;
+  padding: 50px;
+}
+
+.wordmark{
+  width: 300px;
+  margin: 20px;
+  margin-left: -40px;
+
+}
+
+#section3 h2 {
+  font-size: 54px;
+}
+
+#section3 h3 {
+  font-size: 42px;
 }
 
 /* Footer */
