--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,6 +336,24 @@ a:hover {
     text-transform: uppercase;
 }
 
+/* Section 5 */
+
+#section5 {
+  background: url('../../assets/img/bg/floral_pattern.jpg') 50% 100% repeat fixed;
+}
+
+#section5 h2 {
+  font-size: 72px;
+  margin: 50px;
+  text-align: center;
+}
+
+#section5_1 {
+  /*background: url('../img/floral_pattern.jpg') 50% 100% repeat fixed;*/
+  background: red;
+  max-height: 5px;
+}
+
 /* Footer */
 
 .Copyright {
